--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -70,9 +70,10 @@
 
 .controls {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  gap: 8px;
   width: 100%;
   position: fixed;
   bottom: 0;
